<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AccountHasBeenCreatedActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/account_has_been_created"
            android:textColor="#000000"
            android:textSize="35sp"
            app:fontFamily="@font/roboto_bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textSize="15sp"
            android:fontFamily="@font/roboto"
            android:text="@string/click_to_login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp
"
        android:paddingBottom="30dp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="@font/roboto_black"
            android:text="@string/login"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</LinearLayout>