<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_opacity"
    tools:context=".CreateAccount">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVcreateAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="40dp"
                android:paddingRight="40dp"
                android:text="@string/create"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textSize="40sp"
                app:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/TVsignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:text="@string/fill_form"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:fontFamily="@font/roboto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="50dp"
                android:paddingRight="40dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditTextName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#7AFFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textFilter|textCapSentences"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditTextUPMEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#7AFFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textCapSentences"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#7AFFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditTextConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="3dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="15dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#7AFFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <Button
                        android:id="@+id/next_button"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/button"
                        android:text="@string/next"
                        android:textColor="#FFFFFF"
                        android:foreground="?android:attr/selectableItemBackgroundBorderless"
                        app:fontFamily="@font/roboto_bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textViewAlreadyHaveAcc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingTop="30dp"
                    android:text="@string/have_acc"
                    android:textColor="#FFFFFF"
                    app:fontFamily="@font/roboto" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>