<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/login_opacity"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TVcreateAccount"
                android:layout_width="337dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="40dp"
                android:text="@string/welcome"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textSize="40dp"
                app:fontFamily="@font/roboto_bold" />

            <TextView
                android:id="@+id/TVsignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:text="@string/sign_in_to_continue"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                app:fontFamily="@font/roboto" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="50dp"
                android:paddingRight="40dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/EditTextUPMEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textPersonName"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="3dp"
                        android:textColor="#FFFFFF"
                        android:textColorHint="#7AFFFFFF">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_email"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textColor="#FFFFFF" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/EditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:paddingLeft="10dp"
                    android:paddingRight="3dp"
                    android:paddingBottom="5dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#7AFFFFFF">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:paddingRight="40dp">

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    android:includeFontPadding="true"
                    android:text="Sign In"
                    android:textColor="#FFFFFF"
                    app:fontFamily="@font/roboto_bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:paddingTop="5dp"
                    android:text="@string/forgot_your_password"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:fontFamily="@font/roboto" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal|fill_vertical"
                    android:paddingTop="0dp"
                    android:text="@string/dont_have_acc_sign_up"
                    android:textColor="#FFFFFF"
                    android:textSize="15sp"
                    app:fontFamily="@font/roboto" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>